--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,12 @@
-<p>home works!</p>
+<p>
+    <mat-toolbar color="primary">
+        <span style="width: 100%;" class="h2">
+            {{title}}
+        </span>
+    </mat-toolbar>
+    
+</p>
+
+<section>
+
+</section>
