listado de usuarios

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,4 @@
+<app-sidebar></app-sidebar>
 <p>
     <mat-toolbar color="primary">
         <span style="width: 100%;" class="h2">
@@ -8,5 +9,5 @@
 </p>
 
 <section>
-
+    <app-user-list></app-user-list>
 </section>
