--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,13 +1,11 @@
-<app-sidebar></app-sidebar>
 <p>
     <mat-toolbar color="primary">
         <span style="width: 100%;" class="h2">
             {{title}}
         </span>
     </mat-toolbar>
-    
 </p>
 
-<section>
+<section style="height: auto;">
     <app-user-list></app-user-list>
 </section>
