--- a/src/app/components/user-list/user-list.component.html
+++ b/src/app/components/user-list/user-list.component.html
@@ -1,4 +1,4 @@
-<mat-drawer-container class="example-container" autosize>
+<mat-drawer-container class="example-container" autosize style="height: 100%;">
     <mat-drawer #drawer class="example-sidenav" mode="side">
         <!-- <p>Auto-resizing sidenav</p> -->
         <!-- <p *ngIf="showFiller">Lorem, ipsum dolor sit amet consectetur.</p>
@@ -7,7 +7,7 @@
       </button> -->
 
         <div class="sidebar-container">
-
+            <app-user-detail-sidebar></app-user-detail-sidebar>
         </div>
 
     </mat-drawer>
