--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,11 +1,13 @@
-<p>
-    <mat-toolbar color="primary">
-        <span style="width: 100%;" class="h2">
-            {{title}}
-        </span>
-    </mat-toolbar>
-</p>
-
-<section style="height: auto;">
-    <app-user-list></app-user-list>
-</section>
+<div style="height: 100%;">
+    <p>
+        <mat-toolbar color="primary">
+            <span style="width: 100%;" class="h2">
+                {{title}}
+            </span>
+        </mat-toolbar>
+    </p>
+    
+    <section style="height: 100%;">
+        <app-user-list></app-user-list>
+    </section>
+</div>
