--- a/src/app/components/user-detail-sidebar/user-detail-sidebar.component.css
+++ b/src/app/components/user-detail-sidebar/user-detail-sidebar.component.css
@@ -1,7 +1,16 @@
-#form-sidebar{
+#form-sidebar {
     width: 25vw;
 }
 
-.example-form-field{
+.example-form-field {
     width: 100%;
+}
+
+.avatar-container {
+    width: 100%;
+    height: 100px;
+}
+
+.avatar-container img {
+    border-radius: 50%;
 }
