--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,9 +1,10 @@
 <div style="height: 100%;">
     <p>
         <mat-toolbar color="primary">
-            <span style="width: 100%;" class="h2">
-                {{title}}
+            <span style="width: 100%;" class="h3 text-center">
+                Administrador de usuarios - {{title}}
             </span>
+            <button mat-raised-button color="warn" (click)="cerrarSesion()">Salir</button>
         </mat-toolbar>
     </p>
     
