carga de post de usuario y envio de peticion delete para su eliminacion, se agregaron loading-spinner en sidebar

--- a/src/app/components/user-detail-sidebar/user-detail-sidebar.component.css
+++ b/src/app/components/user-detail-sidebar/user-detail-sidebar.component.css
@@ -14,3 +14,10 @@
 .avatar-container img {
     border-radius: 50%;
 }
+
+.post-wrapper {
+    overflow-y: auto;
+    height: 25vh;
+    box-shadow: inset 1px 1px 10px rgba(0, 0, 0, 0.014);
+    border-radius: 5px;
+}
