--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -8,7 +8,7 @@
         </mat-toolbar>
     </p>
     
-    <section style="height: 100%;">
+    <section>
         <app-user-list></app-user-list>
     </section>
 </div>
