implementacion de animaciones en componentes y paginas

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,10 +1,10 @@
 <p>
-  <mat-toolbar color="primary">
+  <mat-toolbar color="primary" class="animate__animated animate__slideInDown">
     <span style="width: 100%;" class="text-center"></span>
   </mat-toolbar>
 </p>
 
-<div class="container mt-5" class="form-container">
+<div class="container mt-5" class="form-container animate__bounceIn">
   <section>
     <form (submit)="login()" [formGroup]="loginForm">
       <h2 class="text-center">Bienvenido</h2>
