--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,6 +1,8 @@
 <p>
   <mat-toolbar color="primary" class="animate__animated animate__slideInDown">
-    <span style="width: 100%;" class="text-center"></span>
+    <span style="width: 100%;" class="text-center">
+    Administrador de usuarios
+    </span>
   </mat-toolbar>
 </p>
 
