--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,14 +1,3 @@
-<div style="height: 100%;">
-    <p>
-        <mat-toolbar color="primary">
-            <span style="width: 100%;" class="h3 text-center">
-                Administrador de usuarios - {{title}}
-            </span>
-            <button mat-raised-button color="warn" (click)="cerrarSesion()">Salir</button>
-        </mat-toolbar>
-    </p>
-    
-    <section>
-        <app-user-list></app-user-list>
-    </section>
+<div>
+    <app-user-list></app-user-list>
 </div>
